default/objects/Account_Plan_Template__c/Account_Plan_Template__c.object-meta.xml
<CustomObject>
    <label>Account Plan Template</label>
    <nameField>
        <label>Account Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>