default/objects/Account_Plan_Template__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Templates</relationshipLabel>
    <relationshipName>Account_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>