default/objects/Account_Plan_Template__c/fields/Footer_Title__c.field-meta.xml
<CustomField>
    <fullName>Footer_Title__c</fullName>
    <label>Footer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>