default/objects/Account_Plan_Template__c/fields/Header_Title__c.field-meta.xml
<CustomField>
    <fullName>Header_Title__c</fullName>
    <label>Header Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>