default/objects/Account_Plan_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Template</label>
    <referenceTo>Account_Plan_Template__c</referenceTo>
    <relationshipLabel>Account Plan Templates</relationshipLabel>
    <relationshipName>Account_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>